Test serviceability/jvmti/vthread/StopThreadTest/StopThreadTest.java failed: expected JVMTI_ERROR_OPAQUE_FRAME instead of: 0

XMLWordPrintable

    • b07

      ----------System.out:(17/508)----------
      Agent init
      Main: prepareAgent started
      Main: prepareAgent finished

      Main #A: method A() must be blocked on entering a synchronized statement
      TestTask.run: started
      TestTask.A: started

      Main #A.1: unsuspended
      Main: stopThread: StopThread returned code: JVMTI_ERROR_THREAD_NOT_SUSPENDED (13)
      Main #A.1: got expected THREAD_NOT_SUSPENDED

      Main #A.2: suspended
      Main: suspendThread
      Main: stopThread: StopThread returned code: JVMTI_ERROR_NONE (0)

      FAILED: Main #A.2: expected JVMTI_ERROR_OPAQUE_FRAME instead of: 0
      ----------System.err:(13/725)----------
      java.lang.RuntimeException: StopThreadTest failed!
      at StopThreadTest.throwFailed(StopThreadTest.java:89)
      at StopThreadTest.run(StopThreadTest.java:134)
      at StopThreadTest.main(StopThreadTest.java:94)
      at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
      at java.base/java.lang.reflect.Method.invoke(Method.java:565)
      at com.sun.javatest.regtest.agent.MainWrapper$MainTask.run(MainWrapper.java:138)
      at java.base/java.lang.Thread.run(Thread.java:1447)

      This appears to be what was expected prior to the fix for JDK-8307968

            Assignee:
            Serguei Spitsyn
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: